# RustAlerts

./: .gitignore  Cargo.toml
src/: alertdetected.rs  main.rs
