[package]
name = "suricata_alerting_script"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
aws-sigv4 = "0.56"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
aws-config = "1.8.10"
aws-sdk-lambda = "1.104.0"

